💄 UI: fix text-align.

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 main {
   max-width: 1000px;
   margin: 0 auto;
-  text-align: center;
 }
 h1,
 h3 {
@@ -14,7 +13,6 @@ pre {
   background-color: #353535;
   padding: 1rem;
   border-radius: 0.5rem;
-  text-align: left;
 }
 .lists {
   font-size: 0.8em;
